# martian-mines

./: CMakeLists.txt  LICENSE  Pipfile  README.md  data_collector.py  package.xml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
config/: aruco.yaml  color_detection.json  color_detection_sim.json  figure_operations.yaml  figures.rviz  images.rviz  mission.rviz  real.yaml  sim.yaml  tfs.rviz
docker/: Dockerfile-jetson  Dockerfile-minimal-intel-ros  docker-compose.yml
launch/: core.launch  detector.launch  example_precision_landing.launch  example_trajectory_tracker.launch  figure_finder.launch  figures_vis.launch  mission.launch  precision_landing_example.launch  realsense.launch  rosbag_play.launch  rosbag_record.launch  rviz.launch
msg/: BoundingBoxLabeledList.msg
scripts/: only_set_ip.sh  rviz.sh  setup.sh  tmux_jetson.sh
src/: barrel_tracker.py  bbox_publisher.py  color_detection.py  detection.py  detections_visualization.py  detector.py  environment_visualization.py  figure_finder.py  generate_trajectory.py  land_on_target.py  mission_controller.py  precision_landing.py  report_uploader.py  rviz_environment.py  tf_start_pose.py  trajectory_generator.py  trajectory_tracker.py  uav_trajectory.py  upload_node.py
src/detectors/: abstract_detector.py  aruco_detector.py  yolo_detector.py
src/drone/: offboard.py  scan_trajectory.py
src/drone_control/: drone.py  drone_base.py  mavlink_telemetry.py  mavsdk_drone_control.py
src/figure/: bounding_box.py  figure.py  rejection_type.py
src/figure_detection/: color_detection.py  figure_collector.py  figure_manager.py
src/figure_managment/: figure_collector.py
src/trajectory/: pure_pursuit.py  trajectory.py
src/utils/: bbox_mapper.py  coords_scaler.py  environment.py  extract_images_from_rosbag.py  positioner.py  uploader.py
tests/utils/: test_coords_scaler.py
