<?xml version="1.0"?>
<package format="2">
  <name>martian_mines</name>
  <version>0.0.0</version>
  <description>Martian Mines category system for 2024 Droniada Challenge</description>

  <maintainer email="highflyers.polsl@gmail.com">highflyers</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export></export>
</package>